--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>My Vector Graphics Editor</title>
+    <title>Joe's Graphics Editor</title>
 
     <script id="vshader" type="x-shader/x-vertex">
         attribute vec4 vPosition;
