--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -37,7 +37,7 @@
 <body onload="main()">
 
 <div style="text-align: center">
-    <h1 id='htitle'>My Vector Graphics Editor</h1>
+    <h1 id='htitle'>Joe Colley's Graphics Editor</h1>
 
     <canvas id="webgl" width="400" height="400" style="border: 1px solid black;">
         Please use a browser that supports the "canvas" tag.
