--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -11,14 +11,13 @@
         varying vec4 v_fColor;
 
         uniform mat4 u_view_matrix;
-        uniform mat4 u_projection_matrix;
         uniform mat4 u_model_matrix;
 
         uniform float u_vPoint_size;
 
         void main()
         {
-            mat4 mvp_matrix = u_view_matrix * u_projection_matrix * u_model_matrix;
+            mat4 mvp_matrix = u_view_matrix * u_model_matrix;
             gl_Position = mvp_matrix * a_vPosition;
 
             gl_PointSize = u_vPoint_size;
