--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -11,20 +11,23 @@
         varying vec4 v_fColor;
 
         uniform mat4 u_view_matrix;
-        uniform mat4 u_model_matrix;
         uniform mat4 u_projection_matrix;
+
+        uniform mat4 u_translate;
+        uniform mat4 u_rotation;
+        uniform mat4 u_scale;
 
         uniform float u_vPoint_size;
 
         void main()
         {
-            mat4 mvp_matrix = u_view_matrix * u_model_matrix * u_projection_matrix;
-            gl_Position = mvp_matrix * a_vPosition;
+            mat4 mvp_matrix = u_view_matrix * u_projection_matrix;
+            mat4 transformation_matrix = u_translate * u_rotation * u_scale;
+            gl_Position = mvp_matrix * transformation_matrix * a_vPosition;
 
             gl_PointSize = u_vPoint_size;
             v_fColor = a_vColor;
         }
-
 
 
     </script>
