--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -11,6 +11,7 @@
         varying vec4 v_fColor;
 
         uniform mat4 u_view_matrix;
+        uniform mat4 u_model_matrix;
         uniform mat4 u_projection_matrix;
         uniform mat4 u_model_matrix;
 
@@ -37,11 +38,6 @@
         {
             gl_FragColor = v_fColor;
         }
-
-
-
-
-
 
     </script>
 
