--- a/Project 1/Part 2/index.html
+++ b/Project 1/Part 2/index.html
@@ -7,34 +7,37 @@
 
     // assume both position and normal are in homogeneous form
 
-    attribute vec4 vPosition, vNormal, flatShading;
-    uniform mat4 modelViewMatrix;
-    uniform mat4 projectionMatrix;
-    uniform vec4 diffuseProduct, specularProduct, ambientProduct;
-    uniform vec4 lightPosition;
-    uniform float shininess;
+    attribute vec4 a_Position, a_Normal, a_flatShading;
 
-    varying vec4 fColor;
+    uniform mat4 u_model_view_matrix;
+    uniform mat4 u_projection_matrix;
+
+    uniform vec4 u_diffuse_product, u_specular_product, u_ambient_product;
+
+    uniform vec4 u_lightPosition;
+    uniform float u_shininess;
+
+    varying vec4 v_Color;
 
     void main()
     {
         //Diffuse
-        vec3 pos = (modelViewMatrix * flatShading).xyz;
-        vec3 N = normalize(modelViewMatrix * vNormal).xyz;
-        vec3 L = normalize(lightPosition.xyz - pos);
-        vec4 diffuse = diffuseProduct * dot(L, N);
+        vec3 pos = (u_model_view_matrix * a_flatShading).xyz;
+        vec3 N = normalize(u_model_view_matrix * a_Normal).xyz;
+        vec3 L = normalize(u_lightPosition.xyz - pos);
+        vec4 diffuse = u_diffuse_product * dot(L, N);
 
         //Specular
         vec3 V =  normalize(-pos);
         vec3 R = (2.0 * dot(L, N) * N) - L;
-        vec4 specular = specularProduct * pow(max(dot(V, R), 0.0), shininess);
+        vec4 specular = u_specular_product * pow(max(dot(V, R), 0.0), u_shininess);
 
         //Ambient
-        vec4 ambient = ambientProduct;
+        vec4 ambient = u_ambient_product;
 
-        gl_Position = projectionMatrix * modelViewMatrix * vPosition;
-	    fColor = diffuse + specular + ambient;
-	    fColor.a = 1.0;
+        gl_Position = u_projection_matrix * u_model_view_matrix * a_Position;
+	    v_Color = diffuse + specular + ambient;
+	    v_Color.a = 1.0;
     }
 
 
@@ -42,12 +45,14 @@
 
     <script id="fragment-shader" type="x-shader/x-fragment">
     precision mediump float;
-    varying vec4 fColor;
+    varying vec4 v_Color;
 
     void main()
     {
-        gl_FragColor = fColor;
+        gl_FragColor = v_Color;
     }
+
+
 
 
     </script>
