--- a/Project 1/Part 2/index.html
+++ b/Project 1/Part 2/index.html
@@ -13,10 +13,13 @@
     uniform mat4 u_projection_matrix;
     uniform mat4 u_model_position_matrix;
 
+    uniform mat4 u_chaikin_position_matrix;
+
     uniform vec4 u_diffuse_product, u_specular_product, u_ambient_product;
 
     uniform vec4 u_lightPosition;
     uniform float u_shininess;
+    uniform bool is_sphere;
 
     varying vec4 v_Color;
 
@@ -36,11 +39,19 @@
         //Ambient
         vec4 ambient = u_ambient_product;
 
-        mat4 mvp_matrix = u_projection_matrix * u_model_view_matrix;
-
-        gl_Position = mvp_matrix * u_model_position_matrix* a_Position;
 	    v_Color = diffuse + specular + ambient;
 	    v_Color.a = 1.0;
+
+        mat4 mvp_matrix = u_projection_matrix * u_model_view_matrix;
+
+        if(is_sphere)
+        {
+            gl_Position = mvp_matrix * u_model_position_matrix * a_Position;
+        }
+        else
+        {
+            gl_Position = mvp_matrix * u_chaikin_position_matrix * a_Position;
+        }
     }
     </script>
 
