--- a/Project 1/Part 2/index.html
+++ b/Project 1/Part 2/index.html
@@ -79,5 +79,18 @@
         Epic fail!
     </canvas>
 </div>
+
+<div style="text-align: center">
+    <label for="red_slider">R</label>
+    <input type="range" id="red_slider" min="0.0" max="1.0" step="0.01" value="1.0" onchange="init()">
+</div>
+<div style="text-align: center">
+    <label for="red_slider">G</label>
+    <input type="range" id="green_slider" min="0.0" max="1.0" step="0.01" value="0.0" onchange="init()">
+</div>
+<div style="text-align: center">
+    <label for="red_slider">B</label>
+    <input type="range" id="blue_slider" min="0.0" max="1.0" step="0.01" value="0.0" onchange="init()">
+</div>
 </body>
 </html>
