--- a/Project 1/Part 2/index.html
+++ b/Project 1/Part 2/index.html
@@ -53,6 +53,9 @@
             gl_Position = mvp_matrix * u_chaikin_position_matrix * a_Position;
         }
     }
+
+
+
     </script>
 
     <script id="fragment-shader" type="x-shader/x-fragment">
@@ -63,6 +66,9 @@
     {
         gl_FragColor = v_Color;
     }
+
+
+
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -81,16 +87,33 @@
 </div>
 
 <div style="text-align: center">
-    <label for="red_slider">R</label>
-    <input type="range" id="red_slider" min="0.0" max="1.0" step="0.01" value="1.0" onchange="init()">
+    <div>
+        <h3>Color</h3>
+        <label for="red_slider">R</label>
+        <input type="range" id="red_slider" min="0.0" max="1.0" step="0.01" value="1.0" onchange="init()">
+    </div>
+    <div>
+        <label for="red_slider">G</label>
+        <input type="range" id="green_slider" min="0.0" max="1.0" step="0.01" value="0.0" onchange="init()">
+    </div>
+    <div>
+        <label for="red_slider">B</label>
+        <input type="range" id="blue_slider" min="0.0" max="1.0" step="0.01" value="0.0" onchange="init()">
+    </div>
 </div>
+
 <div style="text-align: center">
-    <label for="red_slider">G</label>
-    <input type="range" id="green_slider" min="0.0" max="1.0" step="0.01" value="0.0" onchange="init()">
+    <div>
+        <h3>Speed</h3>
+        <label for="red_slider">Speed</label>
+        <input type="range" id="speed_slider" min="0.005" max=".05" step="0.005" value="0.005" onchange="init()">
+    </div>
+    <div>
+        <label for="direction_checkbox">is Playing</label>
+        <input type="checkbox" id="direction_checkbox" checked onchange="on_check()">
+    </div>
+
 </div>
-<div style="text-align: center">
-    <label for="red_slider">B</label>
-    <input type="range" id="blue_slider" min="0.0" max="1.0" step="0.01" value="0.0" onchange="init()">
-</div>
+
 </body>
 </html>
