--- a/Project 1/Part 2/index.html
+++ b/Project 1/Part 2/index.html
@@ -55,7 +55,6 @@
     }
 
 
-
     </script>
 
     <script id="fragment-shader" type="x-shader/x-fragment">
@@ -66,7 +65,6 @@
     {
         gl_FragColor = v_Color;
     }
-
 
 
     </script>
@@ -110,7 +108,7 @@
     </div>
     <div>
         <label for="direction_checkbox">is Playing</label>
-        <input type="checkbox" id="direction_checkbox" checked onchange="on_check()">
+        <input type="checkbox" id="direction_checkbox" checked onchange="on_paused_checked()">
     </div>
 
 </div>
