--- a/Project 1/Part 2/index.html
+++ b/Project 1/Part 2/index.html
@@ -11,7 +11,6 @@
 
     uniform mat4 u_model_view_matrix;
     uniform mat4 u_projection_matrix;
-    uniform mat4 u_model_position_matrix;
 
     uniform mat4 u_chaikin_position_matrix;
 
@@ -20,6 +19,10 @@
     uniform vec4 u_lightPosition;
     uniform float u_shininess;
     uniform bool is_sphere;
+
+    uniform float u_progress;
+    uniform vec3 u_line_start;
+    uniform vec3 u_line_end;
 
     varying vec4 v_Color;
 
@@ -43,17 +46,17 @@
 	    v_Color.a = 1.0;
 
         mat4 mvp_matrix = u_projection_matrix * u_model_view_matrix;
+        vec3 lerp_position = u_line_start + (u_line_end - u_line_start) * u_progress;
 
         if(is_sphere)
         {
-            gl_Position = mvp_matrix * u_model_position_matrix * a_Position;
+            gl_Position = mvp_matrix * a_Position + vec4(lerp_position, 1.0);
         }
         else
         {
             gl_Position = mvp_matrix * u_chaikin_position_matrix * a_Position;
         }
     }
-
 
     </script>
 
