--- a/Project 1/Part 1/index.html
+++ b/Project 1/Part 1/index.html
@@ -13,8 +13,8 @@
         uniform mat4 u_view_matrix;
         uniform mat4 u_projection_matrix;
 
-        uniform mat4 u_translate;
-        uniform mat4 u_origin;
+        uniform mat4 u_to_position;
+        uniform mat4 u_to_origin;
         uniform mat4 u_rotation;
         uniform mat4 u_scale;
 
@@ -23,15 +23,14 @@
         void main()
         {
             mat4 mvp_matrix = u_view_matrix * u_projection_matrix;
-
-            mat4 transformation_matrix = u_origin;
-            transformation_matrix *= u_rotation * u_scale;
+            mat4 transformation_matrix = u_to_origin * (u_rotation * u_scale);
 
             gl_Position = mvp_matrix * transformation_matrix * a_position;
 
             gl_PointSize = u_point_size;
             v_fColor = a_color;
         }
+
 
     </script>
 
@@ -43,6 +42,8 @@
         {
             gl_FragColor = v_fColor;
         }
+
+
     </script>
 
     <script src="lib/webgl-utils.js"></script>
@@ -59,7 +60,7 @@
 <div style="text-align: center">
     <h1 id='htitle'>Joe Colley's Graphics Editor</h1>
 
-    <canvas id="webgl" width="400" height="400" style="border: 3px solid black;">
+    <canvas id="webgl" width="500" height="500" style="border: 1px solid black;">
         Please use a browser that supports the "canvas" tag.
     </canvas>
 
