--- a/Project 1/Part 1/index.html
+++ b/Project 1/Part 1/index.html
@@ -12,20 +12,27 @@
 
         uniform mat4 u_view_matrix;
         uniform mat4 u_projection_matrix;
-        uniform mat4 u_model_matrix;
+
+        uniform mat4 u_to_origin;
+        uniform mat4 u_scale;
+        uniform mat4 u_rotate;
+        uniform mat4 u_to_point;
 
         uniform float u_point_size;
 
         void main()
         {
             mat4 mvp_matrix = u_view_matrix * u_projection_matrix;
-            gl_Position = mvp_matrix * u_model_matrix * a_position;
+            mat4 transformation_matrix = u_to_origin;
+
+            transformation_matrix *= u_rotate;
+            transformation_matrix *= u_scale;
+
+            gl_Position = mvp_matrix * transformation_matrix * a_position;
 
             gl_PointSize = u_point_size;
             v_fColor = a_color;
         }
-
-
     </script>
 
     <script id="fshader" type="x-shader/x-fragment">
@@ -36,8 +43,6 @@
         {
             gl_FragColor = v_fColor;
         }
-
-
     </script>
 
     <script src="lib/webgl-utils.js"></script>
