--- a/Project 1/Part 2/index.html
+++ b/Project 1/Part 2/index.html
@@ -74,7 +74,7 @@ void main()
 <script type="text/javascript" src="lib/initShaders.js"></script>
 
 <script type="text/javascript" src="lib/MV.js"></script>
-<script type="text/javascript" src="shadedSphere1.js"></script>
+<script type="text/javascript" src="main.js"></script>
 
 <body onload="init()">
 <div style="text-align: center">
