--- a/Project 1/Part 1/index.html
+++ b/Project 1/Part 1/index.html
@@ -40,7 +40,7 @@
     <script src="lib/MV.js"></script>
     <script src="lib/cs4731pjt1.js"></script>
 
-    <script src="init.js"></script>
+    <script src="main.js"></script>
 
 </head>
 
