--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <title>CS 4731 Final Project Part I</title>
     <script id="vshader" type="x-shader/x-vertex">
-            attribute vec4 vPosition;
 
-            void main() {
-                gl_Position = vPosition;
-            }
+    attribute vec4 vPosition;
+    void main()
+    {
+        gl_Position = vPosition;
+    }
+
     </script>
 
+
     <script id="fshader" type="x-shader/x-fragment">
-            precision mediump float;
-            void main()
-            {
-                    gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-             }
+
+    precision mediump float;
+    void main()
+    {
+        gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+    }
+
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -28,11 +33,12 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 
-<body onload="main()">
-<h1 id="mode">CS 4731 Final Project</h1>
-
-<canvas id="webgl" class="box" width="1600" height="900">
-    Please use a browser that supports the "canvas" tag.
-</canvas>
-</body>
+<div style="text-align: center">
+    <body onload="main()">
+    <h1 id="mode">Joe Colley's Final Project</h1>
+    <canvas id="webgl" class="box" width="500" height="281" style="border: 1px">
+        Please use a browser that supports the "canvas" tag.
+    </canvas>
+    </body>
+</div>
 </html>
