--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CS 4731 Final Project Part I</title>
+    <meta charset="UTF-8"/>
+    <title>Joe Colley's Final Project</title>
     <script id="vshader" type="x-shader/x-vertex">
 
     attribute vec4 vPosition;
@@ -10,7 +10,6 @@
     {
         gl_Position = vPosition;
     }
-
     </script>
 
 
@@ -27,16 +26,17 @@
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
     <script type="text/javascript" src="lib/initShaders.js"></script>
     <script type="text/javascript" src="lib/MV.js"></script>
-
     <script type="text/javascript" src="lib/model.js"></script>
     <script type="text/javascript" src="lib/face.js"></script>
+
     <script type="text/javascript" src="main.js"></script>
 </head>
 
 <div style="text-align: center">
     <body onload="main()">
     <h1 id="mode">Joe Colley's Final Project</h1>
-    <canvas id="webgl" class="box" width="500" height="281" style="border: 1px">
+    <!--<canvas id="webgl" class="box" width="1600" height="900" style="border: 3px solid black"> Commented out for half screen debugging--->
+    <canvas id="webgl" class="box" width="400" height="225" style="border: 3px solid black">
         Please use a browser that supports the "canvas" tag.
     </canvas>
     </body>
