--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -5,20 +5,36 @@
     <title>Joe Colley's Final Project</title>
     <script id="vshader" type="x-shader/x-vertex">
 
-    attribute vec4 vPosition;
+    attribute vec4 a_position;
+    attribute vec3 a_normal;
+
+    uniform mat4 u_projection_matrix;
+    uniform mat4 u_view_matrix;
+    uniform mat4 u_world_matrix;
+
+    varying vec3 v_normal;
+
     void main()
     {
-        gl_Position = vPosition;
+        gl_Position = u_projection_matrix * u_view_matrix * u_world_matrix * a_position;
+        v_normal = mat3(u_world_matrix) * a_normal;
     }
+
     </script>
 
-
     <script id="fshader" type="x-shader/x-fragment">
-
     precision mediump float;
+
+    varying vec3 v_normal;
+
+    uniform vec4 u_diffuse;
+    uniform vec3 u_lightDirection;
+
     void main()
     {
-        gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+        vec3 normal = normalize(v_normal);
+        float fakeLight = dot(u_lightDirection, normal) * .5 + .5;
+        gl_FragColor = vec4(u_diffuse.rgb * fakeLight, u_diffuse.a);
     }
 
     </script>
