--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -53,7 +53,9 @@
         vec4 fColor = diffuse + specular + ambient;
         fColor.a = 1.0;
 
-        gl_FragColor = texture2D(u_texture, v_texcoord) + fColor;
+        vec4 texColor = texture2D(u_texture, v_texcoord);
+
+        gl_FragColor = texColor * fColor;
     }
 
     </script>
