Revert "Texture is on the sign! Need to remap cords"
This reverts commit 24900b1ccfe0fe72669954664378bcb3998e113b.

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -53,9 +53,7 @@
         vec4 fColor = diffuse + specular + ambient;
         fColor.a = 1.0;
 
-        vec4 texColor = texture2D(u_texture, v_texcoord);
-
-        gl_FragColor = texColor * fColor;
+        gl_FragColor = texture2D(u_texture, v_texcoord) + fColor;
     }
 
     </script>
