Part 1 almost done

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -56,6 +56,7 @@
         gl_FragColor = texColor * fColor;
     }
 
+
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -75,5 +76,9 @@
         Please use a browser that supports the "canvas" tag.
     </canvas>
     </body>
+
+    <div style="text-align: center">
+        <h3>[C] to Play/Pause</h3>
+    </div>
 </div>
 </html>
