--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -12,13 +12,14 @@
     uniform mat4 u_projection_matrix;
     uniform mat4 u_view_matrix;
     uniform mat4 u_world_matrix;
+    uniform mat4 u_model_matrix;
 
     varying vec3 L, N, V;
     varying vec2 v_texcoord;
 
     void main()
     {
-        mat4 mvp_matrix = u_projection_matrix * u_view_matrix * u_world_matrix;
+        mat4 mvp_matrix = (u_projection_matrix * u_view_matrix) * u_world_matrix + u_model_matrix;
         vec3 pos = (mvp_matrix * a_position).xyz;
 
         L = normalize(u_light_position.xyz - pos);
