--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -19,7 +19,7 @@
 
     void main()
     {
-        mat4 mvp_matrix = (u_projection_matrix * u_view_matrix) * u_world_matrix + u_model_matrix;
+        mat4 mvp_matrix = u_projection_matrix * u_view_matrix * u_world_matrix * u_model_matrix;
         vec3 pos = (mvp_matrix * a_position).xyz;
 
         L = normalize(u_light_position.xyz - pos);
@@ -29,7 +29,6 @@
         gl_Position = mvp_matrix * a_position;
         v_texcoord = vec2(a_texcoord.x, a_texcoord.y);
     }
-
     </script>
 
     <script id="fshader" type="x-shader/x-fragment">
@@ -38,6 +37,7 @@
     uniform sampler2D u_texture;
     uniform vec4 ambientProduct, diffuseProduct, specularProduct;
     uniform float shininess;
+    uniform bool u_is_textured;
 
     varying vec3 L, N, V;
     varying vec2 v_texcoord;
@@ -54,10 +54,16 @@
         fColor.a = 1.0;
 
         vec4 texColor = texture2D(u_texture, v_texcoord);
-        gl_FragColor = texColor * fColor;
+
+        if(!u_is_textured)
+        {
+            gl_FragColor = texColor * fColor;
+        }
+        else
+        {
+            gl_FragColor = fColor;
+        }
     }
-
-
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -77,7 +83,6 @@
         Please use a browser that supports the "canvas" tag.
     </canvas>
     </body>
-
     <div style="text-align: center">
         <h3>[C] to Play/Pause</h3>
     </div>
