--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -7,6 +7,7 @@
     attribute vec4 a_position;
     attribute vec3 a_normal;
     attribute vec2 a_texcoord;
+    attribute vec4 a_color;
 
     uniform vec4 u_light_position;
     uniform mat4 u_projection_matrix;
@@ -16,6 +17,7 @@
 
     varying vec3 L, N, V;
     varying vec2 v_texcoord;
+    varying vec4 v_vertexColor;
 
     void main()
     {
@@ -28,6 +30,7 @@
 
         gl_Position = mvp_matrix * a_position;
         v_texcoord = vec2(a_texcoord.x, a_texcoord.y);
+        v_vertexColor = a_color;
     }
     </script>
 
@@ -41,6 +44,7 @@
 
     varying vec3 L, N, V;
     varying vec2 v_texcoord;
+    varying vec4 v_vertexColor;
 
     void main()
     {
@@ -54,15 +58,14 @@
         fColor.a = 1.0;
 
         vec4 texColor = texture2D(u_texture, v_texcoord);
-        vec4 test_color = vec4(1,0,0,1);
 
         if(u_is_textured)
         {
-            gl_FragColor = texColor * fColor;
+            gl_FragColor = fColor * texColor;
         }
         else
         {
-            gl_FragColor = fColor * test_color;
+            gl_FragColor = fColor * v_vertexColor;
         }
     }
     </script>
