--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -32,6 +32,7 @@
         v_texcoord = vec2(a_texcoord.x, a_texcoord.y);
         v_vertexColor = a_color;
     }
+
     </script>
 
     <script id="fshader" type="x-shader/x-fragment">
@@ -68,6 +69,7 @@
             gl_FragColor = fColor;
         }
     }
+
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -89,6 +91,7 @@
     </body>
     <div style="text-align: center">
         <h3>[C] to Play/Pause</h3>
+        <h3>[R] to Reverse Direction</h3>
     </div>
 </div>
 </html>
