--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -17,7 +17,7 @@
 
     varying vec3 L, N, V;
     varying vec2 v_texcoord;
-    varying vec4 v_vertexColor;
+    varying vec4 v_color;
 
     void main()
     {
@@ -30,7 +30,7 @@
 
         gl_Position = mvp_matrix * a_position;
         v_texcoord = vec2(a_texcoord.x, a_texcoord.y);
-        v_vertexColor = a_color;
+        v_color = a_color;
     }
 
     </script>
@@ -40,12 +40,15 @@
 
     uniform sampler2D u_texture;
     uniform vec4 ambientProduct, diffuseProduct, specularProduct;
+
+    uniform vec4 u_face_color;
+
     uniform float shininess;
     uniform bool u_is_textured;
 
     varying vec3 L, N, V;
     varying vec2 v_texcoord;
-    varying vec4 v_vertexColor;
+    varying vec4 v_color;
 
     void main()
     {
@@ -66,7 +69,7 @@
         }
         else
         {
-            gl_FragColor = fColor;
+            gl_FragColor = fColor * u_face_color;
         }
     }
 
@@ -91,7 +94,7 @@
     </body>
     <div style="text-align: center">
         <h3>[C] to Play/Pause</h3>
-        <h3>[R] to Reverse Direction</h3>
+        <h3>[F] to Reverse Direction</h3>
     </div>
 </div>
 </html>
