--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -95,6 +95,7 @@
     <div style="text-align: center">
         <h3>[C] to Play/Pause</h3>
         <h3>[F] to Reverse Direction</h3>
+        <h3>[M] to move the Car</h3>
     </div>
 </div>
 </html>
