--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -35,6 +35,7 @@
     }
 
 
+
     </script>
 
     <script id="fshader" type="x-shader/x-fragment">
@@ -76,6 +77,7 @@
 
 
 
+
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -96,10 +98,10 @@
     </canvas>
     </body>
     <div style="text-align: center">
-        <h3>[C] to Play/Pause</h3>
+        <h3>[C] to play camera</h3>
         <h3>[D] to nest the camera to the car</h3>
-        <h3>[F] to Reverse Direction</h3>
-        <h3>[M] to move the Car</h3>
+        <h3>[F] to reverse direction</h3>
+        <h3>[M] to move the car</h3>
     </div>
 </div>
 </html>
