2-3 done, but could be improved

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -36,6 +36,7 @@
 
         gl_Position = mvp_matrix * a_position;
     }
+
     </script>
 
     <script id="fshader" type="x-shader/x-fragment">
@@ -84,6 +85,7 @@
     }
 
 
+
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -106,7 +108,8 @@
     <div style="text-align: center">
         <h3>[C] to play camera</h3>
         <h3>[D] to nest the camera to the car</h3>
-        <h3>[F] to reverse direction</h3>
+        <h3>[E] to toggle the skybox</h3>
+        <h3>[L] to toggle the light on and off</h3>
         <h3>[M] to move the car</h3>
     </div>
 </div>
