--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -6,33 +6,42 @@
     <script id="vshader" type="x-shader/x-vertex">
     attribute vec4 a_position;
     attribute vec3 a_normal;
-    attribute vec2 a_texcoord;
-    attribute vec4 a_color;
+    attribute vec2 a_tex_coord;
+    attribute vec4 a_diffuse;
+    attribute vec4 a_specular;
 
     uniform vec4 u_light_position;
+
     uniform mat4 u_projection_matrix;
     uniform mat4 u_camera_matrix;
     uniform mat4 u_view_matrix;
     uniform mat4 u_world_matrix;
     uniform mat4 u_model_matrix;
 
-    varying vec3 L, N, V;
-    varying vec2 v_texcoord;
+    varying vec3 v_light_direction;
+    varying vec3 v_face_normal;
+    varying vec3 v_camera_direction;
+
+    varying vec2 v_tex_coord;
     varying vec3 v_skybox_coord;
-    varying vec4 v_color;
+
+    varying vec4 v_diffuse;
+    varying vec4 v_specular;
 
     void main()
     {
         mat4 mvp_matrix = (u_projection_matrix * u_camera_matrix * u_view_matrix) * u_model_matrix;
         vec3 pos = (mvp_matrix * a_position * u_world_matrix).xyz;
 
-        L = normalize(u_light_position.xyz - pos);
-        N = normalize(mvp_matrix * a_position).xyz;
-        V = normalize(-a_normal);
+        v_light_direction = normalize(u_light_position.xyz - pos);
+        v_face_normal = normalize(mvp_matrix * a_position).xyz;
+        v_camera_direction = normalize(-a_normal);
 
-        v_texcoord = vec2(a_texcoord.x, a_texcoord.y);
+        v_tex_coord = vec2(a_tex_coord.x, a_tex_coord.y);
         v_skybox_coord = a_position.xyz;
-        v_color = a_color;
+
+        v_diffuse = a_diffuse;
+        v_specular = a_specular;
 
         gl_Position = mvp_matrix * a_position;
     }
@@ -41,7 +50,7 @@
     <script id="fshader" type="x-shader/x-fragment">
     precision mediump float;
 
-    varying vec2 v_texcoord;
+    varying vec2 v_tex_coord;
     uniform sampler2D u_stop_sign;
 
     varying vec3 v_skybox_coord;
@@ -49,33 +58,37 @@
 
     uniform vec4 ambientProduct, diffuseProduct, specularProduct;
 
-    uniform float shininess;
+    uniform float u_shininess;
     uniform int u_display_type;
 
-    varying vec3 L, N, V;
-    varying vec4 v_color;
+    varying vec3 v_light_direction;
+    varying vec3 v_face_normal;
+    varying vec3 v_camera_direction;
+
+    varying vec4 v_diffuse;
+    varying vec4 v_specular;
 
     void main()
     {
-	    vec3 R = (2.0 * dot(L, N) * N) - L;
+	    vec3 reflection = (2.0 * dot(v_light_direction, v_face_normal) * v_face_normal) - v_light_direction;
 
-        vec4 diffuse = diffuseProduct * dot(L, N);
+        vec4 diffuse = diffuseProduct * dot(v_light_direction, v_face_normal);
         vec4 ambient = ambientProduct;
-        vec4 specular = specularProduct * pow(max(dot(V, R), 0.0), shininess);
+        vec4 specular = specularProduct * pow(max(dot(v_camera_direction, reflection), 0.0), u_shininess);
 
         vec4 fColor = diffuse + specular + ambient;
         fColor.a = 1.0;
 
-        vec4 stopsign = texture2D(u_stop_sign, v_texcoord);
-        vec4 skybox = textureCube(u_skybox,v_skybox_coord);
+        vec4 stop_sign = texture2D(u_stop_sign, v_tex_coord);
+        vec4 skybox = textureCube(u_skybox, v_skybox_coord);
 
         if(u_display_type == 0)
         {
-            gl_FragColor = fColor * stopsign;
+            gl_FragColor = fColor * stop_sign;
         }
         else if (u_display_type == 1)
         {
-            gl_FragColor = fColor * v_color;
+            gl_FragColor = fColor * v_diffuse + (v_specular * specular);
         }
         else if(u_display_type == 2)
         {
