--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -30,7 +30,7 @@
 
     void main()
     {
-        //matrixes combind
+        //matrices combined
         mat4 mvp_matrix = (u_projection_matrix * u_camera_matrix * u_view_matrix) * u_model_matrix;
 
         //info for lighting
