Moved methods and small fix in get shadow matrix

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -110,8 +110,8 @@
         }
         else if(u_display_type == 3)
         {
-            gl_FragColor = black;
-            //gl_FragColor = white;
+            //gl_FragColor = black;
+            gl_FragColor = white;
         }
     }
 
