--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -28,6 +28,10 @@
     varying vec4 v_diffuse;
     varying vec4 v_specular;
 
+    varying vec3 v_reflect_direction;
+    varying vec3 v_refract_direction;
+    varying vec3 v_view_direction;
+
     void main()
     {
         //matrices combined
@@ -46,10 +50,21 @@
         v_diffuse = a_diffuse;
         v_specular = a_specular;
 
+        //reflection info
+        vec4 position = mvp_matrix * vec4(a_normal, 1.0);
+        vec3 normal = normalize(a_normal);
+
+        vec3 incident_direction = normalize(position.xyz);
+        vec3 reflect_direction = reflect(incident_direction, normal);
+        vec3 refract_direction = refract(incident_direction, normal, 0.5);
+
+        v_reflect_direction = reflect_direction;
+        v_refract_direction = refract_direction;
+        v_view_direction = normalize(-position.xyz);
+
         //position
         gl_Position = mvp_matrix * a_position;
     }
-
     </script>
 
     <script id="fshader" type="x-shader/x-fragment">
@@ -69,6 +84,10 @@
     varying vec3 v_light_direction;
     varying vec3 v_face_normal;
     varying vec3 v_camera_direction;
+
+    varying vec3 v_reflect_direction;
+    varying vec3 v_refract_direction;
+    varying vec3 v_view_direction;
 
     varying vec4 v_diffuse;
     varying vec4 v_specular;
@@ -96,6 +115,7 @@
         //2 == skybox
         //3 == shadow
         //4 == reflection
+        //5 == refraction
         if(u_display_type == 0)
         {
             gl_FragColor = fColor * textured;
@@ -114,10 +134,15 @@
         }
         else if(u_display_type == 4)
         {
-
+            vec3 reflect_color = textureCube(u_skybox, reflect(v_reflect_direction, v_view_direction)).rgb;
+            gl_FragColor.rgb = mix(reflect_color, gl_FragColor.rgb, 0.4);
+        }
+        else if(u_display_type == 5)
+        {
+            vec3 refract_color = textureCube(u_skybox, refract(v_refract_direction, v_view_direction, .5)).rgb;
+            gl_FragColor.rgb = mix(refract_color, gl_FragColor.rgb, 0.6);
         }
     }
-
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
@@ -141,8 +166,10 @@
         <h3>[C] to toggle camera movement camera</h3>
         <h3>[D] to toggle the camera being nested to the car</h3>
         <h3>[E] to toggle the skybox</h3>
+        <h3>[F] to toggle bunny refraction</h3>
         <h3>[L] to toggle the light on and off</h3>
         <h3>[M] to toggle car movement the car</h3>
+        <h3>[R] to toggle car reflections</h3>
         <h3>[S] to toggle shadows</h3>
     </div>
 </div>
