--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -52,7 +52,7 @@
 
         //reflection info
         vec4 position = mvp_matrix * vec4(a_normal, 1.0);
-        vec3 normal = normalize(mat3(mvp_matrix) * a_normal);
+        vec3 normal = normalize(mat3(mvp_matrix) * a_position.xyz);
 
         vec3 incident_direction = normalize(position.xyz);
         vec3 reflect_direction = reflect(incident_direction, normal);
@@ -65,6 +65,7 @@
         //position
         gl_Position = mvp_matrix * a_position;
     }
+
     </script>
 
     <script id="fshader" type="x-shader/x-fragment">
@@ -108,6 +109,8 @@
         //get texture coords
         vec4 textured = texture2D(u_stop_sign, v_tex_coord);
         vec4 skybox = textureCube(u_skybox, v_skybox_coord);
+        vec3 reflect_color = textureCube(u_skybox, reflect(v_reflect_direction, v_view_direction)).rgb;
+        vec3 refract_color = textureCube(u_skybox, refract(v_refract_direction, v_view_direction, 1.0)).rgb;
 
         //what type of object it is
         //0 == textured
@@ -134,17 +137,16 @@
         }
         else if(u_display_type == 4)
         {
-            vec3 reflect_color = textureCube(u_skybox, reflect(v_reflect_direction, v_view_direction)).rgb;
             gl_FragColor.rgb = mix(reflect_color, gl_FragColor.rgb, 0.4);
             gl_FragColor.a = 1.0;
         }
         else if(u_display_type == 5)
         {
-            vec3 refract_color = textureCube(u_skybox, refract(v_refract_direction, v_view_direction, 0.5)).rgb;
             gl_FragColor.rgb = mix(refract_color, gl_FragColor.rgb, 0.6);
             gl_FragColor.a = 1.0;
         }
     }
+
     </script>
 
     <script type="text/javascript" src="lib/webgl-utils.js"></script>
