--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -35,7 +35,7 @@
     void main()
     {
         //matrices combined
-        mat4 mvp_matrix = (u_projection_matrix * u_camera_matrix * u_view_matrix) * u_model_matrix;
+        mat4 mvp_matrix = (u_projection_matrix * u_camera_matrix * u_view_matrix);
 
         //info for lighting
         v_light_direction = normalize((u_light_position - a_position).xyz);
@@ -52,18 +52,18 @@
 
         //reflection info
         vec4 position = mvp_matrix * vec4(a_normal, 1.0);
-        vec3 normal = normalize(mat3(mvp_matrix) * a_position.xyz);
+        vec3 normal = normalize(mat3(u_camera_matrix * u_projection_matrix) * a_position.xyz);
 
         vec3 incident_direction = normalize(position.xyz);
         vec3 reflect_direction = reflect(incident_direction, normal);
-        vec3 refract_direction = refract(incident_direction, normal, 0.5);
+        vec3 refract_direction = refract(incident_direction, normal, .1);
 
         v_reflect_direction = reflect_direction;
         v_refract_direction = refract_direction;
         v_view_direction = normalize(-position.xyz);
 
         //position
-        gl_Position = mvp_matrix * a_position;
+        gl_Position = mvp_matrix * u_model_matrix * a_position;
     }
 
     </script>
@@ -106,6 +106,7 @@
         vec4 fColor = vec4((diffuse + specular + ambientProduct).xyz, 1.0);
 
         //get texture coords
+        vec4 not_textured_color = fColor * v_diffuse + (v_specular * specular);
         vec4 textured = texture2D(u_stop_sign, v_tex_coord);
         vec4 skybox = textureCube(u_skybox, v_skybox_coord);
         vec3 reflect_color = textureCube(u_skybox, reflect(v_reflect_direction, v_view_direction)).rgb;
@@ -120,7 +121,7 @@
         //1 == colored
         else if (u_display_type == 1)
         {
-            gl_FragColor = fColor * v_diffuse + (v_specular * specular);
+            gl_FragColor = not_textured_color;
         }
         //2 == skybox
         else if(u_display_type == 2)
@@ -135,13 +136,13 @@
         //4 == reflection
         else if(u_display_type == 4)
         {
-            gl_FragColor.rgb = mix(reflect_color, gl_FragColor.rgb, 0.4);
+            gl_FragColor.rgb = mix(reflect_color, not_textured_color.rgb, 0.25);
             gl_FragColor.a = 1.0;
         }
         //5 == refraction
         else if(u_display_type == 5)
         {
-            gl_FragColor.rgb = mix(refract_color, gl_FragColor.rgb, 0.6);
+            gl_FragColor.rgb = mix(refract_color, not_textured_color.rgb, 0.1);
             gl_FragColor.a = 1.0;
         }
     }
